--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "leaflet": "^1.9.4",
+    "maplibre-gl": "^5.1.1",
     "next": "^15.1.7",
     "nominatim-geocoder": "^0.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-leaflet": "^5.0.0"
+    "react-leaflet": "^5.0.0",
+    "react-map-gl": "^8.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
