--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.4.10",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.476.0",
     "maplibre-gl": "^5.1.1",
