--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.476.0",
     "maplibre-gl": "^5.1.1",
     "next": "^15.1.7",
+    "next-intl": "^4.1.0",
     "nominatim-geocoder": "^0.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
