--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next-intl": "^4.1.0",
     "nominatim-geocoder": "^0.1.4",
     "react": "^19.0.0",
+    "react-cookie-consent": "^9.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
     "react-map-gl": "^8.0.1",
