--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
@@ -27,6 +28,8 @@
     "maplibre-gl": "^5.1.1",
     "next": "^15.1.7",
     "next-intl": "^4.1.0",
+    "next-pwa": "^5.6.0",
+    "next-sitemap": "^4.2.3",
     "nominatim-geocoder": "^0.1.4",
     "react": "^19.0.0",
     "react-cookie-consent": "^9.0.0",
