--- a/src/app/manifest.json
+++ b/src/app/manifest.json
@@ -1,21 +1,35 @@
 {
-  "name": "blatvodka.com",
+  "name": "Blat Vodka",
   "short_name": "Blat",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#d97706",
+  "description": "The purest vodka in the world.",
   "icons": [
     {
-      "src": "/web-app-manifest-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable"
+      "src": "./icon1.png",
+      "sizes": "96x96",
+      "type": "image/png"
     },
     {
-      "src": "/web-app-manifest-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
+      "src": "./apple-icon.png",
+      "sizes": "180x180",
+      "type": "image/png"
     }
   ],
-  "theme_color": "#dbdbdb",
-  "background_color": "#f3f3f3",
-  "display": "standalone"
+  "screenshots": [
+    {
+      "src": "/screenshots/screenshot1.png",
+      "sizes": "422x855",
+      "type": "image/png",
+      "form_factor": "narrow"
+    },
+    {
+      "src": "/screenshots/screenshot2.png",
+      "sizes": "1475x938",
+      "type": "image/png",
+      "form_factor": "wide"
+    }
+  ]
 }
