--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postbuild": "next-sitemap"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.17.2",
     "@google/generative-ai": "^0.24.1",
     "@headlessui/react": "^2.2.4",
     "@next/third-parties": "^15.5.0",
@@ -22,6 +23,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "firebase": "^12.4.0",
     "framer-motion": "^12.4.10",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.476.0",
@@ -37,6 +39,7 @@
     "react-map-gl": "^8.0.1",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
+    "sharp": "^0.34.4",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.177.0"
