--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,5 +32,5 @@
     "strict": false
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "next.config.mjs"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "functions"]
 }
